# Ward

./: .gitignore  .travis.yml  LICENSE  README.md  SPEC.md  Ward.cabal  check-mono.sh  mono.config  notes.txt  stack.yaml
docs/: Checking.txt  Logic.txt
minimal-annotations/: Main.hs
src/: Args.hs  Check.hs  Config.hs  DumpCallMap.hs  Graph.hs  InternIdents.hs  Main.hs  Orphans.hs  ParseCallMap.hs  Types.hs
src/Algebra/: Algebra.hs
src/Check/: Permissions.hs
test/: Main.hs  Spec.hs  conditional-permission.c  conditional-permission.config  conditional-permission.h  disallowed-permission.c  disallowed-permission.config  disallowed-with-subject.c  invalid-permission-action.c  invalid-permission-actions.c  missing-implicit-permission.c  missing-implicit-permission.config  missing-implied-permission.c  missing-permission.c  missing-permission.config  missing-permission.h  missing-permissions-conditional.c  missing-permissions-conditional.h  permission-with-subject.c  using-revoked-permission.c  using-revoked-permission.config  using-revoked-permission.h  violated-restriction.c  violated-restriction.config
