name:                Ward
version:             0.1.0.0
synopsis:            Static permission checker for C programs.
description:         See README.md
homepage:            https://github.com/evincarofautumn/ward#readme
license:             MIT
license-file:        LICENSE
author:              Jon Purdy
maintainer:          evincarofautumn@gmail.com
copyright:           2016 Jon Purdy
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable ward
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Args
                     , Check.Permissions
                     , Config
                     , DumpCallMap
                     , InternIdents
                     , Graph
                     , ParseCallMap
                     , Orphans
                     , Types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , aeson
                     , async
                     , array
                     , bytestring
                     , containers
                     , deepseq
                     , filepath
                     , hashable
                     , language-c >= 0.7.2
                     , optparse-applicative
                     , parsec
                     , pretty
                     , syb
                     , text
                     , transformers
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  if !impl(ghc >= 8.0)
    build-depends:     semigroups == 0.18.*

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src, test
  main-is:             Spec.hs
  other-modules:       Args
                     , Check.Permissions
                     , Config
                     , DumpCallMap
                     , InternIdents
                     , Graph
                     , ParseCallMap
                     , Orphans
                     , Types
  ghc-options:         -Wall
  build-depends:       base
                     , HUnit
                     , aeson
                     , async
                     , array
                     , bytestring
                     , containers
                     , deepseq
                     , hashable
                     , hspec
                     , language-c
                     , optparse-applicative
                     , parsec
                     , pretty
                     , syb
                     , text
                     , transformers
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  if !impl(ghc >= 8.0)
    build-depends:     semigroups == 0.18.*

source-repository head
  type:     git
  location: https://github.com/evincarofautumn/ward
