name:                Ward
version:             0.1.0.0
synopsis:            Static permission checker for C programs.
description:         Ward is a static permission checker for C programs. See
                     the README for details.
homepage:            https://github.com/evincarofautumn/ward#readme
license:             MIT
license-file:        LICENSE
author:              Jon Purdy
maintainer:          evincarofautumn@gmail.com
copyright:           2016 Jon Purdy
category:            Language
build-type:          Simple
tested-with:         GHC==8.4.3, GHC==8.6.5, GHC==8.8.1
cabal-version:       >=1.10
extra-source-files:  test/*.c, test/*.h, test/*.config

library
  hs-source-dirs:      src
  exposed-modules:     Algebra.Algebra
                     , Args
                     , Check.Permissions
                     , Config
                     , DumpCallMap
                     , InternIdents
                     , Graph
                     , ParseCallMap
                     , Orphans
                     , Types
  ghc-options:         -Wall
  build-depends:       base < 5
                     , aeson
                     , async
                     , array
                     , bytestring
                     , containers >= 0.5.8
                     , deepseq
                     , filepath
                     , hashable
                     , language-c >= 0.8
                     , optparse-applicative
                     , parsec
                     , pretty
                     , semigroups
                     , syb
                     , text
                     , transformers
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  if !impl(ghc >= 8.0)
    build-depends:     semigroups == 0.18.*

executable ward
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , Ward
                     , async
                     , containers
                     , filepath
                     , language-c
                     , text
                     , transformers
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall
  build-depends:       base < 5
                     , HUnit
                     , Ward
                     , containers >= 0.5.8
                     , hspec
                     , language-c
                     , parsec
                     , text
  default-language:    Haskell2010
  if !impl(ghc >= 8.0)
    build-depends:     semigroups == 0.18.*

source-repository head
  type:     git
  location: https://github.com/evincarofautumn/ward
